# tzclock

./: Doxyfile  Makefile.am  TzClock.desktop  builddeb.sh.in  configure.ac  tzclock.spec.in
debian/: control.in  gauge.substvars  tzclock.substvars
src/: ParseZone.c  ParseZone.h  TzClock.c  TzClockCairo.c  TzClockConfig.c  TzClockConfig.h  TzClockDisp.h  TzClockIcon.xpm  TzClockIcon_small.xpm  TzClockImage.c  list.c  list.h  screenSize.c  tzclockrc
